[package]
name = "laserbeam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.108.0"
rocket = "0.5.0-rc.1"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.14", features = [ "full" ] }