[package]
name = "laserbeam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.108.0"
rocket = "0.5.0-rc.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.14", features = [ "full" ] }
async-trait = "0.1"
hmac = "0.11"
sha2 = "0.9"
rand = "0.8"
hex = "0.4"
scopeguard = "1.1.0"